--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,5 +8,7 @@ environment:
   sdk: '>=1.0.0 <2.0.0'
 dependencies:
   args: any
+  google_datastore_v1beta1_api: ">=0.4.6 <0.5.0"
+  # googleclouddatastore: ">=0.1.2 <0.2.0" # consider if the rest based api total sucks
 dev_dependencies:
   unittest: any
