fetch first page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,5 +11,6 @@ dependencies:
   google_datastore_v1beta1_api: ">=0.4.6 <0.5.0"
   # googleclouddatastore: ">=0.1.2 <0.2.0" # consider if the rest based api total sucks
   http: any
+  meta: any
 dev_dependencies:
   unittest: any
