--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,5 +12,6 @@ dependencies:
   http: ">=0.9.0 <0.11.0"
   meta: ">=0.8.8 <0.9.0"
   path: ">=1.1.0 <2.0.0"
+  crypto: any
 dev_dependencies:
   unittest: ">=0.10.1+2 <0.11.0"
