--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,5 +14,6 @@ dependencies:
   path: ">=1.1.0 <2.0.0"
   logging: ">=0.9.0 <0.10.0"
   crypto: ">=0.9.0 <0.10.0"
+  mustache: ">=0.1.5 <0.2.0"
 dev_dependencies:
   unittest: ">=0.10.1+2 <0.11.0"
