--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,5 +15,6 @@ dependencies:
   logging: ">=0.9.0 <0.10.0"
   crypto: ">=0.9.0 <0.10.0"
   mustache: ">=0.1.5 <0.2.0"
+  quiver: ">=0.18.2 <0.19.0"
 dev_dependencies:
   unittest: ">=0.10.1+2 <0.11.0"
