--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dart_carte_du_jour
-version: 0.0.0-pre.0
+version: 0.0.1
 authors:
 - Adam Singer <financeCoding@gmail.com>
 description: Service that generates package documentation for pub.dartlang.org
