--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
   sdk: '>=1.0.0 <2.0.0'
 dependencies:
   args: ">=0.10.0+2 <0.11.0"
-  google_datastore_v1beta1_api: ">=0.4.6 <0.5.0"
+  google_oauth2_client: ">=0.3.6 <0.3.7"
+  google_datastore_v1beta2_api: ">=0.4.0 <0.5.0"
   http: ">=0.9.0 <0.11.0"
   meta: ">=0.8.8 <0.9.0"
   path: ">=1.1.0 <2.0.0"
