--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,5 +18,6 @@ dependencies:
   mustache: ">=0.1.5 <0.2.0"
   quiver: ">=0.18.2 <0.19.0"
   uuid: ">=0.3.2 <0.3.3"
+  route: ">=0.4.6 <0.4.7"
 dev_dependencies:
   unittest: ">=0.10.1+2 <0.11.0"
