--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ homepage: https://github.com/financeCoding/dart-carte-du-jour
 environment:
   sdk: '>=1.0.0 <2.0.0'
 dependencies:
-  args: ">=0.10.0+2 <0.11.0"
+  args: ">=0.11.0 <0.12.0"
   google_oauth2_client: ">=0.3.6 <0.3.7"
   google_datastore_v1beta2_api: "0.4.3"
   http: ">=0.9.0 <0.11.0"
@@ -17,6 +17,7 @@ dependencies:
   crypto: ">=0.9.0 <0.10.0"
   mustache: ">=0.1.5 <0.2.0"
   quiver: ">=0.18.2 <0.19.0"
+  unscripted: ">=0.4.2 <0.5.0"
   uuid: ">=0.3.2 <0.3.3"
   route: ">=0.4.6 <0.4.7"
 dev_dependencies:
